logic/src/parse/snapshots/logic__parse__ui__invalid_brackets3.snap
---
source: logic/src/parse/ui.rs
assertion_line: 50
expression: "ui_test(\"(((((((()\".to_string())"

---
error: Mismatching brackets!
  ┌─ file:1:7
  │
1 │ (((((((()
  │       ^ This bracket is opened, but it is never closed


